--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <table cellspacing="20">
     <tr>
-        <td><img src="images/Antonio.png"
+        <td><img src="Images/Antonio.png"
                  alt="antonio-campos-profile-picture"></td>
         <td><h1>Antonio Campos</h1>
             <p>
